--- a/.eslintrc
+++ b/.eslintrc
@@ -9,17 +9,9 @@
     "react": {
       "version": "detect"
     },
-    "import/extensions": [
-      ".js",
-      ".jsx",
-      ".ts",
-      ".tsx"
-    ],
+    "import/extensions": [".js", ".jsx", ".ts", ".tsx"],
     "import/parsers": {
-      "@typescript-eslint/parser": [
-        ".ts",
-        ".tsx"
-      ]
+      "@typescript-eslint/parser": [".ts", ".tsx"]
     },
     "import/resolver": {
       "typescript": {
@@ -67,9 +59,7 @@
     "react/jsx-filename-extension": [
       1,
       {
-        "extensions": [
-          ".tsx"
-        ]
+        "extensions": [".tsx"]
       }
     ],
     "react/function-component-definition": [
@@ -97,15 +87,8 @@
   },
   "overrides": [
     {
-      "files": [
-        "**/__tests__/**/*.tsx?",
-        "**/?(*.)+(spec|test).tsx?"
-      ],
-      "plugins": [
-        "jest-dom",
-        "testing-library",
-        "jest"
-      ],
+      "files": ["**/__tests__/**/*.tsx?", "**/?(*.)+(spec|test).tsx?"],
+      "plugins": ["jest-dom", "testing-library", "jest"],
       "extends": [
         "plugin:jest-dom/recommended",
         "plugin:testing-library/react",
